--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <ul>
     <li><a href="register.html">Register</a></li>
     <li><a href="login.html">Login</a></li>
-    <li><a href="home.html">Home</a></li>
+    <li><a href="home2.html">Home</a></li>
   </ul>
 </body>
 </html>
