--- a/home2.html
+++ b/home2.html
@@ -215,61 +215,61 @@
         <div class="book">
             <img src="DC Track Cicuit.png" alt="DC Track Circuit">
             <h3>DC Track Circuit</h3>
-            <p>Author: Author 1</p>
+            <p>Date :</p>
             <a class="pdf-button" href="https://drive.google.com/file/d/1ABDTK433c6Vdq3t4wBbWt9EbcVnaGCeF/view?usp=drive_link" target="_blank">Installation Guide</a>
         </div>
         <div class="book">
             <img src="Earth Leakage Detector.png" alt="component_image">
             <h3>Earth Leakage Detector</h3>
-            <p>Author: Author 2</p>
+            <p>Date :</p>
             <a class="pdf-button" href="https://drive.google.com/file/d/1y4DrirEn2sAU8dYEuPqjL0wBe6zWwwd_/view?usp=drive_link" target="_blank">Installation Guide</a>
         </div>
         <div class="book">
             <img src="Earthing of S&T Gears.png" alt="component_image">
             <h3>Earthing of S&T Gears</h3>
-            <p>Author: Author 2</p>
+            <p>Date :</p>
             <a class="pdf-button" href="https://drive.google.com/file/d/1MNV7dtc9-9BSlX6dXJ6YoQPkWDTLs3S1/view?usp=drive_link" target="_blank">Installation Guide</a>
         </div>
         <div class="book">
             <img src="Location Box V1.png" alt="component_image">
             <h3>Location Box V1</h3>
-            <p>Author: Author 2</p>
+            <p>Date :</p>
             <a class="pdf-button" href="https://drive.google.com/file/d/1muuTjehvaQwc8PttpgkGWCbhwG3b9efr/view?usp=drive_link" target="_blank">Installation Guide</a>
         </div>
         <div class="book">
             <img src="Signals V1.png" alt="component_image">
             <h3>Signals V1</h3>
-            <p>Author: Author 2</p>
+            <p>Date :</p>
             <a class="pdf-button" href="https://drive.google.com/file/d/1ATAkDlDswGqHZ8QV5aZszfAQcG6p_zqv/view?usp=drive_link" target="_blank">Installation Guide</a>
         </div>
         <div class="book">
-            <img src="DC Track Circuit.png" alt="component_image">
-            <h3>DC Track Circuit</h3>
-            <p>Date : 23/05/2023</p>
-            <a class="pdf-button" href="https://drive.google.com/file/d/1ABDTK433c6Vdq3t4wBbWt9EbcVnaGCeF/view?usp=sharing" target="_blank">Installation Guide</a>
-        </div>
-        <div class="book">
             <img src="image.jpg" alt="component_image">
-            <h3>Component</h3>
-            <p>Author: Author 2</p>
+            <h3>Component Name</h3>
+            <p>Date :</p>
             <a class="pdf-button" href="handbook.pdf" target="_blank">Installation Guide</a>
         </div>
         <div class="book">
             <img src="image.jpg" alt="component_image">
-            <h3>Component</h3>
-            <p>Author: Author 2</p>
+            <h3>Component Name</h3>
+            <p>Date :</p>
             <a class="pdf-button" href="handbook.pdf" target="_blank">Installation Guide</a>
         </div>
         <div class="book">
             <img src="image.jpg" alt="component_image">
-            <h3>Component</h3>
-            <p>Author: Author 2</p>
+            <h3>Component Name</h3>
+            <p>Date :</p>
             <a class="pdf-button" href="handbook.pdf" target="_blank">Installation Guide</a>
         </div>
         <div class="book">
             <img src="image.jpg" alt="component_image">
-            <h3>Component</h3>
-            <p>Author: Author 2</p>
+            <h3>omponent Name</h3>
+            <p>Date :</p>
+            <a class="pdf-button" href="handbook.pdf" target="_blank">Installation Guide</a>
+        </div>
+        <div class="book">
+            <img src="image.jpg" alt="component_image">
+            <h3>Component Name</h3>
+            <p>Date :</p>
             <a class="pdf-button" href="handbook.pdf" target="_blank">Installation Guide</a>
         </div>
     </div>
