--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         .container {
             max-width: 800px;
             margin: 0 auto;
-            padding: 40px;
+            padding: 70px;
             box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
             background-color: #fff;
             margin-top: 80px;
@@ -80,7 +80,7 @@
         </div>
     </div>
     <div class="contact-info">
-      <p>Contact us at <a href="siemensmobilityintern@gmail.com">siemensmobilityintern@gmail.com</a> or call +91 9325888171.</p>
+      <p>Contact us at <a href="mailto:siemensmobilityintern@gmail.com">siemensmobilityintern@gmail.com</a> or call +91 9325888171.</p>
   </div>
 </body>
 </html>
