--- a/login.html
+++ b/login.html
@@ -90,7 +90,7 @@
         </form>
     </div>
     <div class="contact-info">
-        <p>Contact us at <a href="siemensmobilityintern@gmail.com">siemensmobilityintern@gmail.com</a> or call +91 9325888171.</p>
+        <p>Contact us at <a href="mailto:siemensmobilityintern@gmail.com">siemensmobilityintern@gmail.com</a> or call +91 9325888171.</p>
     </div>
     <script>
       // JavaScript code to handle form submission
