--- a/register.html
+++ b/register.html
@@ -94,7 +94,7 @@
         </form>
     </div>
     <div class="contact-info">
-        <p>Contact us at <a href="siemensmobilityintern@gmail.com">siemensmobilityintern@gmail.com</a> or call +91 9325888171.</p>
+        <p>Contact us at <a href="mailto:siemensmobilityintern@gmail.com">siemensmobilityintern@gmail.com</a> or call +91 9325888171.</p>
     </div>
 </body>
 </html>
